--- a/web-frontend/modules/core/assets/scss/components/dashboard.scss
+++ b/web-frontend/modules/core/assets/scss/components/dashboard.scss
@@ -73,13 +73,21 @@
   padding: 0;
   display: flex;
   flex-wrap: wrap;
+  height: 220px;
 }
 
 .dashboard__group-item {
   position: relative;
   z-index: 1;
-  width: 20%;
+  width: 48%;
   margin-bottom: 20px;
+  margin-right: 10px;
+  border: 2px solid #5a6275;
+  border-radius: 20px;
+
+  .group-item {
+    margin: 30px;
+  }
 }
 
 .dashboard__group-item-link {
@@ -89,15 +97,6 @@
 
   &:hover {
     text-decoration: none;
-
-    &::before {
-      @include absolute(-8px);
-
-      content: "";
-      background-color: $color-neutral-100;
-      border-radius: 3px;
-      z-index: -1;
-    }
   }
 }
 
@@ -120,6 +119,85 @@
   @extend %ellipsis;
 
   color: $color-primary-900;
-  width: 100%;
   line-height: 32px;
+  margin-bottom: 30px;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.dashboard__group-item-esg {
+  margin-bottom: 10px;
+  display: flex;
+  justify-content: space-between;
+  font-size: 14px;
+}
+
+.dashboard__group-item-esg-bar {
+  margin-bottom: 15px;
+}
+
+.item-action-row {
+  margin-top: 15px;
+  display: flex;
+  justify-content: space-between;
+
+  .check-box-text {
+    font-weight: bold;
+    display: flex;
+    align-items: center;
+  }
+}
+
+.toggle__button {
+  vertical-align: middle;
+  user-select: none;
+  cursor: pointer;
+}
+
+.toggle__button input[type="checkbox"] {
+  opacity: 0;
+  position: absolute;
+  width: 1px;
+  height: 1px;
+}
+
+.toggle__button .toggle__switch {
+  display: inline-block;
+  height: 12px;
+  border-radius: 6px;
+  width: 40px;
+  background: #bfcbd9;
+  box-shadow: inset 0 0 1px #bfcbd9;
+  position: relative;
+  margin-left: 10px;
+  transition: all 0.25s;
+}
+
+.toggle__button .toggle__switch::after,
+.toggle__button .toggle__switch::before {
+  content: "";
+  position: absolute;
+  display: block;
+  height: 18px;
+  width: 18px;
+  border-radius: 50%;
+  left: 0;
+  top: -3px;
+  transform: translateX(0);
+  transition: all 0.25s cubic-bezier(0.5, -0.6, 0.5, 1.6);
+}
+
+.toggle__button .toggle__switch::after {
+  background: #4d4d4d;
+  box-shadow: 0 0 1px #666;
+}
+
+.toggle__button .toggle__switch::before {
+  background: #4d4d4d;
+  box-shadow: 0 0 0 3px rgba(0, 0, 0, 0.1);
+  opacity: 0;
+}
+
+.m-l-10 {
+  margin-left: 10px;
 }
